# Digital-Image-Processing_2023

./: .gitignore  README.md
hw1/: Makefile  README.md
hw1/hw1_311833007/: Makefile  ReadMe.txt  bitmap.cpp  bitmap.h  main_flip.cpp  main_quan.cpp  main_scaling.cpp
hw1/src/: bitmap.cpp  bitmap.h  main_flip  main_flip.cpp  main_quan.cpp  main_scaling.cpp
hw2/: Makefile  README.md
hw2/hw2_311833007/: Makefile
hw2/hw2_311833007/src/: bitmap.cpp  bitmap.h  main_low_luminosity.cpp  test.cpp
hw2/hw2_311833007/tool/: display_hist_from_bmp.py  display_hist_from_dat.py
hw2/src/: bitmap.cpp  bitmap.h  define.cpp  define.h  dip.cpp  dip.h  main_denoise.cpp  main_low_luminosity.cpp  main_sharpness.cpp
hw2/tool/: AHE.py  cv_hist_equal.py  separable filter.py
hw3/: Makefile  README.md
hw3/src/: define.h  dip.cpp  dip.h  main_color_constancy  main_color_constancy.cpp  main_image_enhancement.cpp
hw3/tool/: color_cvt.py  gaussian_kernel.py  test.py
hw4/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  main_restoration
hw4/src/: argparse.cpp  argparse.h  bitmap.cpp  define.cpp  dip.cpp  dip.h  freq_helper.cpp  freq_helper.hpp  main_restoration.cpp
hw4/tool/: image_restoration.py
